# DisplayItemsExtractor

./: ClaimLevelExtraction.py  PaperLevelExtraction.py  README.md  common.py  read_sprint3_bushel_claims.py  setup.cfg  setup.py
input/claims/: AALTONEN_Criminology_2013_weJ4.txt
input/papers/XMLFileIntersection/: Abendroth_AmSocioRev_2014_G8Lr.xml
input/papers/grobid-tei-xml/: Aakvik_SocSciMed_2010_5lxl.xml
src/: ClaimLevelExtraction.py  PaperLevelExtraction.py  common.py
src/table_and_fig_ref_extraction/: ExtractTableAndFigRefPatterns.py  README.md
