[metadata]
name = table_and_fig_ref_extraction
version = 0.0.1
author = Yasasi Abeysinghe
description = This code repository contains libraries and applications of Python programs that extract figures and
tables references from the text in scientific papers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lamps-lab/TableAndFigureReferenceExtractor
project_urls =
    Bug Tracker = https://github.com/lamps-lab/TableAndFigureReferenceExtractor/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src